found closing tag error in index.html solved ongoing layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ body {
 
 /** header **/
 header {
-    position: fixed;
     z-index: 2;
     width: 100%;
 }
@@ -62,7 +61,7 @@ header {
 }
 
 #hero-text {
-    position: absolute;
+    position: relative;
     color: #E6395C;
     top: 30%;
     text-align: center;
@@ -114,17 +113,16 @@ header {
 /** About Us Section **/
 
 #about-us {
-    position: absolute;
     width: 100%;
     height: 1000px;
 }
 
 #about-us h1 {
-    text-align: center;
     text-transform: uppercase;
     text-decoration: underline;
     font-family: 'russo one', sans-serif;
     color: #E6395C;
+    text-align: center;
     font-size: 300%;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -134,27 +132,25 @@ header {
     width: 90%;
     margin: 0 auto;
     color: #E6395C;
-    text-align: center;
     margin: auto;
     font-size: large;
+    text-align: center;
     margin-bottom: 10px;
-    position: relative;
-    display: block;
 }
 
 #info-box-outer {
     width: 100%;
     height: 700px;
     margin: auto;
-    position: absolute;
+    display: flex;
+    justify-content: center;
 }
 
 #about-left {
     width: 25%;
     border: solid 5px #E6395C;
-    height: 600px;
+    height: 500px;
     border-radius: 15px;
-    position: relative;
     display: inline-block;
     margin: 3%;
 }
@@ -163,37 +159,25 @@ header {
     width: 25%;
     margin: 0 auto;
     border: solid 5px #E6395C;
-    height: 600px;
+    height: 500px;
     border-radius: 15px;
-    position: relative;
     display: inline-block;
     margin: 3%;
 }
 
 #about-right {
     width: 25%;
-    height: 600px;
+    height: 500px;
     border: solid 5px #E6395C;
     border-radius: 15px;
-    position: relative;
     display: inline-block;
     margin: 3%;
 }
 
-.about-img {
-    position: relative;
-    left: 50%;
-    height: 100px;
-    width: 100px;
-    margin-left: -50px;
-    padding-top: 30px;
-}
 
-.info-box>h3 {
-    text-align: center;
-    font-size: 200%;
-    letter-spacing: 2px;
-    padding: 50px;
-    text-decoration: underline;
-    color: #E6395C;
+/** Meet Our Artists Section **/
+
+#meet-artists {
+    height: 800px;
+    width: 100%;
 }
